--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ a
   <div class="kontakt-grid">
     <div class="kontakt-left">
       <div class="label">Aadress</div>
-      <div class="address-box">Pargi tn 1, Tallinn</div>
+      <div class="address-box">Vana-Veerenni 7, 10135 Tallinn</div>
 
       <div class="label" style="margin-top:18px;">Tagasiside</div>
       <textarea class="feedback-box" placeholder="Kirjuta oma tagasiside siia..."></textarea>
@@ -178,3 +178,4 @@ a
 
 </body>
 </html>
+
